--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-parser": "^3.0.0"
+    "axios": "^0.27.2",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.0.1"
   }
 }
